@@ -74,6 +74,7 @@ static ExcelValue left_1(ExcelValue string_v);
 static ExcelValue len(ExcelValue string_v);
 static ExcelValue excel_log(ExcelValue number);
 static ExcelValue excel_log_2(ExcelValue number, ExcelValue base);
+static ExcelValue ln(ExcelValue number);
 static ExcelValue excel_exp(ExcelValue number);
 static ExcelValue max(int number_of_arguments, ExcelValue *arguments);
 static ExcelValue min(int number_of_arguments, ExcelValue *arguments);
@@ -331,6 +332,16 @@ static ExcelValue excel_log_2(ExcelValue number_v, ExcelValue base_v) {
   if(b<=0) { return NUM; }
 
   return	new_excel_number(log(n)/log(b));
+}
+
+static ExcelValue ln(ExcelValue number_v) {
+	CHECK_FOR_PASSED_ERROR(number_v)
+	NUMBER(number_v, n)
+	CHECK_FOR_CONVERSION_ERROR
+
+  if(n<=0) { return NUM; }
+
+  return	new_excel_number(log(n));
 }
 
 static ExcelValue excel_exp(ExcelValue number_v) {
