@@ -55,6 +55,7 @@ class MapFormulaeToC < MapValuesToC
     :'LEFT1' => 'left_1',
     :'LEFT2' => 'left',
     :'LEN' => 'len',
+    :'LN' => 'ln',
     :'LOG1' => 'excel_log',
     :'LOG2' => 'excel_log_2',
     :'MATCH2' => 'excel_match_2',
