@@ -109,3 +109,5 @@ require_relative 'excel_functions/forecast'
 require_relative 'excel_functions/ensure_is_number'
 
 require_relative 'excel_functions/value'
+
+require_relative 'excel_functions/ln'
